--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           εγγυώνται την επιλεξιμότητά σας ή μη για επιδόματα. Για ακριβή αποτελέσματα, πρέπει να διαβάζετε και το κείμενο βοήθειας που εμφανίζεται στο τέλος κάποιων ερωτήσεων με τη μορφή ερωτηματικού. Ο προσομοιωτής δεν
           λαμβάνει υπόψη όλες τις παραμέτρους που ισχύουν ανά περίπτωση. Πριν συνεχίσετε, παρακαλούμε
           διαβάστε την
-          <a href="#" id="openDisclaimer">Αποποίηση Ευθύνης</a>
+          <a href="#" id="openDisclaimer" class="text-blue-600 hover:underline">Αποποίηση Ευθύνης</a>
           σχετικά με την εφαρμογή Κοινωνικά επιδόματα 2025.
         </p>
         <button
