--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </p>
         <p id="disclaimer-prompt">
           Τα αποτελέσματα αυτού του προσομοιωτή αποτελούν οδηγό και δεν
-          εγγυώνται την επιλεξιμότητά σας ή μη για επιδόματα. Για ακριβή αποτελέσματα, πρέπει να διαβάζετε και το κείμενο βοήθειας που εμφανίζεται στο τέλος κάποιων ερωτήσεων με τη μορφή ερωτηματικού. Ο προσομοιωτής δεν
+          εγγυώνται την επιλεξιμότητά σας ή μη για επιδόματα. Για ακριβή αποτελέσματα, πρέπει να διαβάζετε και το κείμενο βοήθειας που εμφανίζεται στο τέλος κάποιων ερωτήσεων με το σύμβολο i. Ο προσομοιωτής δεν
           λαμβάνει υπόψη όλες τις παραμέτρους που ισχύουν ανά περίπτωση. Πριν συνεχίσετε, παρακαλούμε
           διαβάστε την
           <a href="#" id="openDisclaimer" class="text-blue-600 hover:underline">Αποποίηση Ευθύνης</a>
