--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="el">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-16" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title class="language-component" data-component="mainTitle">
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
+    
     <!-- Tailwind CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.css"
@@ -25,11 +25,13 @@
       crossorigin="anonymous"
     />
 
+   
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="@digigov-css_v0.31.0/digigov.css" />
 
     
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <!-- Decision tree -->
@@ -125,10 +127,10 @@
         </div>
       </div>
 
-      <!-- Disclaimer Modal -->
       <div class="disclaimer-overlay" id="disclaimerOverlay">
         <div class="disclaimer">
-          <h2>Αποποίηση Ευθύνης</h2>
+          <h2 style="font-size: 28px; font-weight: bold;"><strong>Αποποίηση Ευθύνης</strong></h2>
+          <br> 
           <div class="disclaimer-content">
             <!-- Disclaimer -->
             <p>
@@ -137,6 +139,7 @@
               παρέχει κάποιος είναι λανθασμένα τότε ενδέχεται να είναι εσφαλμένα
               και τα αποτελέσματα.
             </p>
+            <br>
             <p>
               Τα αποτελέσματα αποτελούν οδηγό και δεν εγγυώνται την
               επιλεξιμότητα. Επειδή το ερωτηματολόγιο δεν λαμβάνει υπόψη όλα τα
@@ -148,6 +151,7 @@
               επακόλουθη) που προκύπτει από ή σε σχέση με οποιαδήποτε χρήση ή
               εξάρτηση από το ερωτηματολόγιο.
             </p>
+            <br>
             <p>
               Θα χρειαστεί να επισκεφθείτε τους αντίστοιχους επίσημους
               ιστοτόπους για να υποβάλετε αίτηση για κάθε επίδομα ξεχωριστά (π.χ. https://www.gov.gr/ και https://opeka.gr/).
