--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
           <em data-component="subTitle3" class="language-component"
             >Δεν θα αποθηκεύσουμε ούτε θα κοινοποιήσουμε τις απαντήσεις σας.</em
           >
-        </p>
-        <p id="disclaimer-prompt">
+         </p>
+        <p id="disclaimer-prompt" style="font-size: 1.2em;">
           Τα αποτελέσματα αυτού του προσομοιωτή αποτελούν οδηγό και δεν
-          εγγυώνται την επιλεξιμότητά σας ή μη για επιδόματα. Για ακριβή αποτελέσματα, πρέπει να διαβάζετε και το κείμενο βοήθειας που εμφανίζεται στο τέλος κάποιων ερωτήσεων με το σύμβολο i. Ο προσομοιωτής δεν
+          εγγυώνται την επιλεξιμότητά σας ή μη για επιδόματα. Για ακριβή αποτελέσματα, πρέπει να διαβάζετε και το <strong>κείμενο βοήθειας</strong> που εμφανίζεται στο τέλος κάποιων ερωτήσεων με το <strong>σύμβολο i.</strong> Ο προσομοιωτής δεν
           λαμβάνει υπόψη όλες τις παραμέτρους που ισχύουν ανά περίπτωση. Πριν συνεχίσετε, παρακαλούμε
           διαβάστε την
           <a href="#" id="openDisclaimer" class="text-blue-600 hover:underline">Αποποίηση Ευθύνης</a>
